@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://www.apache.org/xsd/maven-4.0.0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>org.jala.university</groupId>
-  <artifactId>commons-module</artifactId>
-  <version>1.0-SNAPSHOT</version>
-
-  <name>commons-module</name>
+  <artifactId>account-module</artifactId>
+  <version>1.0-RELEASE</version>
+  <name>account-module</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -15,14 +14,26 @@
     <maven.compiler.target>17</maven.compiler.target>
     <commons.module.version>1.0-SNAPSHOT</commons.module.version>
     <spring.boot.version>3.2.4</spring.boot.version>
-    <spring-security.version>5.6.2</spring-security.version>
+      <spring-security.version>5.6.2</spring-security.version>
     <jakarta.persistence.version>3.1.0</jakarta.persistence.version>
     <lombok.version>1.18.28</lombok.version>
     <javafx.version>22</javafx.version>
     <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
+    <testfx.version>4.0.16-alpha</testfx.version>
   </properties>
 
   <dependencies>
+    <!-- Local Dependency -->
+    <dependency>
+      <groupId>org.jala.university</groupId>
+      <artifactId>commons-module</artifactId>
+      <version>${commons.module.version}</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/libs/commons-module-1.0-SNAPSHOT.jar</systemPath>
+    </dependency>
+
+
+    <!-- Third-party libs -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -41,11 +52,6 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-mail</artifactId>
-      <version>${spring.boot.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
       <version>${spring.boot.version}</version>
     </dependency>
     <dependency>
@@ -69,95 +75,151 @@
       <artifactId>javafx-fxml</artifactId>
       <version>${javafx.version}</version>
     </dependency>
+
+    <!-- Unit Test Dependencies -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.10.0-M1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.5.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jacoco</groupId>
+      <artifactId>org.jacoco.core</artifactId>
+      <version>0.8.11</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testfx</groupId>
+      <artifactId>testfx-core</artifactId>
+      <version>${testfx.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testfx</groupId>
+      <artifactId>testfx-junit5</artifactId>
+      <version>${testfx.version}</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>42.7.4</version>
     </dependency>
 
+
+    <!-- Spring Boot Starter Test -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <version>${spring.boot.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-dependencies</artifactId>
+      <version>${spring.boot.version}</version>
+      <type>pom</type>
+      <scope>import</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>2.2.222</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <repositories>
     <repository>
       <id>gitlab-maven</id>
+      <url>https://gitlab.com/api/v4/projects/62011320/packages/maven</url>
+    </repository>
+    <repository>
+      <id>commons-module-repo</id>
       <url>https://gitlab.com/api/v4/projects/62011362/packages/maven</url>
+    </repository>
+    <repository>
+      <id>sonatype-oss-snapshots</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
     </repository>
   </repositories>
 
   <distributionManagement>
     <repository>
       <id>gitlab-maven</id>
-      <url>https://gitlab.com/api/v4/projects/62011362/packages/maven</url>
+      <url>https://gitlab.com/api/v4/projects/62011320/packages/maven</url>
     </repository>
     <snapshotRepository>
       <id>gitlab-maven</id>
-      <url>https://gitlab.com/api/v4/projects/62011362/packages/maven</url>
+      <url>https://gitlab.com/api/v4/projects/62011320/packages/maven</url>
     </snapshotRepository>
   </distributionManagement>
 
   <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.11.0</version>
-          <configuration>
-            <source>${maven.compiler.source}</source>
-            <target>${maven.compiler.target}</target>
-            <fork>true</fork>
-            <!--suppress UnresolvedMavenProperty -->
-            <executable>${JAVA_HOME}/bin/javac</executable>
-            <compilerArgs>
-              <arg>--add-exports</arg>
-              <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-              <arg>--add-exports</arg>
-              <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-            </compilerArgs>
-          </configuration>
-        </plugin>
+    <plugins>
+      <plugin>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>${javafx.maven.plugin.version}</version>
+        <executions>
+          <execution>
+            <id>run</id>
+            <configuration>
+              <mainClass>org.jala.university.MainApp</mainClass>
+            </configuration>
+          </execution>
+          <execution>
+            <id>debug</id>
+            <configuration>
+              <mainClass>org.jala.university.MainApp</mainClass>
+              <options>
+                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8005</option>
+              </options>
+            </configuration>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>org.jala.university.MainApp</mainClass>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>${spring.boot.version}</version>
+      </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.11</version>
+        <configuration>
+          <excludes>
+            <exclude>org/jala/university/**</exclude>
+          </excludes>
+        </configuration>
+        <executions>
+          <execution>
+            <id>prepare-agent</id>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>report</id>
+            <phase>test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.3.1</version>
-        </plugin>
-
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.3.1</version>
-        </plugin>
-
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.1.2</version>
-        </plugin>
-
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.3.0</version>
-        </plugin>
-
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>3.1.1</version>
-        </plugin>
-
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>3.1.1</version>
-        </plugin>
-
-        <plugin>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>4.0.0-M3</version>
-        </plugin>
-
-        <plugin>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>3.4.5</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+    </plugins>
   </build>
 </project>
-
